# docs/swagger.json
@@ -206,7 +206,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.MetaPage"
+                            "$ref": "#/definitions/types.ListingPage"
                         }
                     }
                 }
@@ -323,9 +323,9 @@
                 }
             }
         },
-        "/v1/places/{id}/images": {
+        "/v1/places/{id}/list": {
             "get": {
-                "description": "Gets images for a place given a valid place ID",
+                "description": "Gets place data for a place listing given a valid place ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -335,7 +335,7 @@
                 "tags": [
                     "places"
                 ],
-                "summary": "Gets images for a place",
+                "summary": "Gets remaining place data for a place listing",
                 "parameters": [
                     {
                         "type": "integer",
@@ -349,18 +349,15 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/types.ListingDetails"
                         }
                     }
                 }
             }
         },
-        "/v1/places/{id}/info": {
+        "/v1/places/{id}/map": {
             "get": {
-                "description": "Gets info for a place given a valid place ID",
+                "description": "Gets place data for a map marker given a valid place ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -370,7 +367,7 @@
                 "tags": [
                     "places"
                 ],
-                "summary": "Gets info for a place",
+                "summary": "Gets remaining place data for a map marker",
                 "parameters": [
                     {
                         "type": "integer",
@@ -384,7 +381,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.PlaceInfo"
+                            "$ref": "#/definitions/types.MarkerDetails"
                         }
                     }
                 }
@@ -392,7 +389,7 @@
         },
         "/v1/places/{id}/meta": {
             "get": {
-                "description": "Gets metadata for a place given a valid place ID",
+                "description": "Gets metadata for a search result or bookmark",
                 "consumes": [
                     "application/json"
                 ],
@@ -402,7 +399,7 @@
                 "tags": [
                     "places"
                 ],
-                "summary": "Gets metadata for a place",
+                "summary": "Gets remaining metadata for a place",
                 "parameters": [
                     {
                         "type": "integer",
@@ -874,6 +871,51 @@
                 }
             }
         },
+        "types.Listing": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "number"
+                }
+            }
+        },
+        "types.ListingDetails": {
+            "type": "object",
+            "properties": {
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "point": {
+                    "$ref": "#/definitions/types.GeoJSONPoint"
+                }
+            }
+        },
+        "types.ListingPage": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.Listing"
+                    }
+                },
+                "more": {
+                    "type": "boolean"
+                }
+            }
+        },
         "types.Login": {
             "type": "object",
             "properties": {
@@ -904,28 +946,20 @@
                 }
             }
         },
-        "types.MetaPage": {
+        "types.MarkerDetails": {
             "type": "object",
             "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/types.PlaceMeta"
-                    }
+                "address": {
+                    "type": "string"
                 },
-                "more": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "types.PlaceInfo": {
-            "type": "object",
-            "properties": {
                 "images": {
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
+                },
+                "name": {
+                    "type": "string"
                 },
                 "rating": {
                     "type": "number"
@@ -935,14 +969,14 @@
         "types.PlaceMeta": {
             "type": "object",
             "properties": {
-                "address": {
-                    "type": "string"
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
+                "point": {
+                    "$ref": "#/definitions/types.GeoJSONPoint"
                 },
                 "rating": {
                     "type": "number"
